--- a/src/app/payment/payment.component.html
+++ b/src/app/payment/payment.component.html
@@ -4,7 +4,41 @@
             <mat-card-title>Payment title</mat-card-title>
         </mat-card-header>
         <mat-card-content>
-            Payment content
+            
+            <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z1">
+
+              
+                <!-- Position Column -->
+                <ng-container matColumnDef="id">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header> No. </th>
+                  <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+                </ng-container>
+              
+                <!-- Name Column -->
+                <ng-container matColumnDef="amount">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header> Amount </th>
+                  <td mat-cell *matCellDef="let element"> {{element.amount}} </td>
+                </ng-container>
+              
+                <!-- Weight Column -->
+                <ng-container matColumnDef="type">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header> Type </th>
+                  <td mat-cell *matCellDef="let element"> {{element.type}} </td>
+                </ng-container>
+              
+                <!-- Symbol Column -->
+                <ng-container matColumnDef="student">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header> Student </th>
+                  <td mat-cell *matCellDef="let element"> {{element.student.firstName}} </td>
+                </ng-container>
+              
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+              </table>
+              
+              <mat-paginator [pageSizeOptions]="[10, 50, 100]"></mat-paginator>
+
+
         </mat-card-content>
     </mat-card>
 </div>
