--- a/src/app/student/student.component.html
+++ b/src/app/student/student.component.html
@@ -27,6 +27,12 @@
                     <td mat-cell *matCellDef="let element">{{ element.lastName }}</td>
                 </ng-container>
 
+                <!-- Code Column -->
+                <ng-container matColumnDef="code">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header>Code</th>
+                    <td mat-cell *matCellDef="let element">{{ element.code }}</td>
+                </ng-container>
+
                 <!-- payment Column -->
                 <ng-container matColumnDef="payment">
                     <th mat-header-cell *matHeaderCellDef>Payment</th>
